@@ -41,8 +41,10 @@ psana-translate -n 5 --output_file=myout.h5 --Epics=exclude /reg/d/psdm/mec/meca
 ''' % (os.path.basename(sys.argv[0]), )
 
 # this is initialized with the default values from default_psana.cfg
-defaultTranslatorOptions = (('store_epics','updates_only'),
+defaultTranslatorOptions = (('overwrite','false),
+                            ('store_epics','updates_only'),
                             ('output_file','**PUT SOMETHING HERE**'),
+                            ('overwrite','false'),
                             ('AcqTdc','include'),
                             ('AcqWaveform','include'),
                             ('Alias','include'),
@@ -54,8 +56,11 @@ defaultTranslatorOptions = (('store_epics','updates_only'),
                             ('EBeam','include'),
                             ('Encoder','include'),
                             ('Epics','include'),
+                            ('Epix','include'),
+                            ('EpixSampler','include'),
                             ('Evr','include'),
                             ('EvrIO','include'),
+                            ('Evs','include'),
                             ('FEEGasDetEnergy','include'),
                             ('Fccd','include'),
                             ('Fli','include'),
@@ -95,6 +100,7 @@ defaultTranslatorOptions = (('store_epics','updates_only'),
                             ('std_string_key_filter','include all'),
                             ('shuffle','true'),
                             ('deflate','1'),
+                            ('create_alias_links','true'),
                             ('chunkSizeTargetInBytes','1703936'),
                             ('chunkSizeTargetObjects','0'),
                             ('maxChunkSizeInBytes','10649600'),
